tests/good/interpret/030-closure.clap
val x = 42
val f = fun (y) => x + y
val z = f 0

