tests/bad/typing/024-fun-unification.clap
** int -> int
val f = fun (x) => (x + x)

val _ = f ("42")
